[package]
name = "pore"
version = "0.1.0"
edition = "2021"

readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2"
chrono = { version = "0.4", features = ["serde"] }
clap = "3"
ignore = "0.4"
serde = "1.0"
serde_json = "1.0"
tantivy = "0.16.1"
termcolor = "1.1"
toml = "0.5"
macros = { path = "../macros" }
simple-error = "0.2"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "pore"
path = "src/main.rs"
