[package]
name = "pore-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
chrono = { version = "0.4", features = ["serde"] }
ignore = "0.4"
mlua = { version = "0.7", features = ["async", "macros", "module"] }
serde = "1.0"
serde_json = "1.0"
tantivy = "0.16.1"
macros = { path = "../macros" }
