[package]
name = "pore-lua"
version = "0.1.0"
edition = "2021"

[dependencies]
mlua = { version = "0.7", features = ["async", "macros", "module"] }
pore-core = { path = "../pore-core" }
tantivy = "0.16.1"

[lib]
crate-type = ["cdylib"]

[features]
default = ["lua51", "vendored"]
lua54 = ["mlua/lua54"]
lua53 = ["mlua/lua53"]
lua52 = ["mlua/lua52"]
lua51 = ["mlua/lua51"]
luajit = ["mlua/luajit"]
vendored = ["mlua/vendored"]
